# kreuzberg

./: .gitignore  .gitmodules  .pre-commit-config.yaml  4.0-rc1  =0.30.0  ARCHITECTURE_V4.md  ATTRIBUTION.md  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  DOCUMENTATION_AUDIT.md  FFI_PATTERNS.md  IMPLEMENTATION_PLAN_TESSERACT.md  README.md  REMAINING_TESTS_REVIEW.md  RUST_FEATURES_ASSESSMENT.md  RUST_MIGRATION_RESULTS.md  TODO.md  Taskfile.yaml  Taskfile.yml  V4_STRUCTURE.md  ai-rulez.yaml  biome.json  error.md  mkdocs.yaml  package.json  pnpm-lock.yaml  pyproject.toml  versions.json
.docker/: Dockerfile
.github/: DRAFT_PR_structured_extraction.md
.github/workflows/: benchmarks.yaml  ci-csharp.yaml  (+31 more)
3.0/: 404.html  index.html  objects.inv  sitemap.xml
4.0/: 404.html  index.html  objects.inv  sitemap.xml
benchmarks/: aggressive_memory_test.py  baseline_benchmark.py  baseline_memory_image_preprocessing.py  compare_memory_image_preprocessing.py  compare_python_rust.py  hybrid_comparison.py  kreuzberg_v4_rc1_enhanced_insights.md  kreuzberg_v4_rc1_summary.md  memory_profiler.py  performance_benchmark.py  pyproject.toml  quality_utils_benchmark.py  quality_utils_rust_benchmark.py  rust_vs_python_benchmark.py  rust_vs_python_benchmark_results.json  simple_memory_comparison.py  token_reduction_baseline.py  token_reduction_baseline_results.json
comparative-benchmarks/: README.md  pyproject.toml
crates/kreuzberg/: Cargo.toml  README.md  build.rs
crates/kreuzberg-cli/: Cargo.toml
crates/kreuzberg-cli/src/: main.rs
crates/kreuzberg-cli/tests/: commands_test.rs  config_discovery_test.rs  server_test.rs
crates/kreuzberg-node/: Cargo.toml  build.rs  index.d.ts  index.js  metadata.d.ts  package.json
crates/kreuzberg-node/src/: lib.rs
crates/kreuzberg-py/: Cargo.toml  build.rs
crates/kreuzberg-py/src/: config.rs  core.rs  error.rs  lib.rs  mime.rs  plugins.rs  servers.rs  structured.rs  types.rs
crates/kreuzberg-py/src/bindings/: cache.rs  chunking.rs  email.rs  excel.rs  html.rs  image_preprocessing.rs  libreoffice.rs  mod.rs  ocr.rs  pandoc.rs  plugins.rs  pptx.rs  structured.rs  table.rs  text.rs  text_utils.rs  xml.rs
crates/kreuzberg-py/src/types/: email.rs  excel.rs  html.rs  mod.rs  text.rs  xml.rs
crates/kreuzberg-wasm/: Cargo.toml  package.json
crates/kreuzberg-wasm/src/: lib.rs
crates/kreuzberg/src/: embeddings.rs  error.rs  language_detection.rs  lib.rs  types.rs
crates/kreuzberg/src/api/: error.rs  handlers.rs  mod.rs  server.rs  types.rs
crates/kreuzberg/src/cache/: mod.rs
crates/kreuzberg/src/chunking/: mod.rs
crates/kreuzberg/src/core/: config.rs  extractor.rs  io.rs  mime.rs  mod.rs  pipeline.rs  registry.rs
crates/kreuzberg/src/extraction/: archive.rs  email.rs  excel.rs  html.rs  image.rs  libreoffice.rs  mod.rs  pptx.rs  structured.rs  table.rs  text.rs  xml.rs
crates/kreuzberg/src/extraction/pandoc/: mime_types.rs  mod.rs  server.rs  subprocess.rs  version.rs
crates/kreuzberg/src/extractors/: archive.rs  email.rs  excel.rs  html.rs  image.rs  mod.rs  pandoc.rs  pdf.rs  pptx.rs  structured.rs  text.rs  xml.rs
crates/kreuzberg/src/image/: dpi.rs  preprocessing.rs  resize.rs
crates/kreuzberg/src/keywords/: config.rs  mod.rs  processor.rs  rake.rs  types.rs  yake.rs
crates/kreuzberg/src/mcp/: mod.rs  server.rs
crates/kreuzberg/src/ocr/: cache.rs  error.rs  hocr.rs  mod.rs  processor.rs  tesseract_backend.rs  types.rs
crates/kreuzberg/src/ocr/table/: mod.rs
crates/kreuzberg/src/pdf/: error.rs  images.rs  metadata.rs  mod.rs  rendering.rs  text.rs
crates/kreuzberg/src/plugins/: extractor.rs  mod.rs  ocr.rs  processor.rs  registry.rs  traits.rs  validator.rs
crates/kreuzberg/src/stopwords/: mod.rs
crates/kreuzberg/src/text/: mod.rs  quality.rs  string_utils.rs
crates/kreuzberg/src/text/token_reduction/: config.rs  core.rs  filters.rs  mod.rs  semantic.rs  simd_text.rs
crates/kreuzberg/src/token_reduction/: cjk_utils.rs  core.rs  filters.rs  mod.rs  semantic.rs  simd_text.rs
crates/kreuzberg/tests/: api_tests.rs  archive_integration.rs  batch_orchestration.rs  batch_processing.rs  concurrency_stress.rs  config_features.rs  core_integration.rs  csv_integration.rs  docx_metadata_extraction_test.rs  email_integration.rs  error_handling.rs  format_integration.rs  image_integration.rs  keywords_integration.rs  keywords_quality.rs  mime_detection.rs  ocr_configuration.rs  ocr_errors.rs  ocr_quality.rs  ocr_stress.rs  office_integration.rs  pandoc_integration.rs  pdf_integration.rs  pipeline_integration.rs  plugin_system.rs  security_validation.rs  test_fastembed.rs  xlsx_metadata_extraction_test.rs
crates/kreuzberg/tests/helpers/: mod.rs
docker/: Dockerfile.full
docs/: cli.md  contributing.md  index.md  ocr.md
examples/: structured_extraction.py
kreuzberg/: __init__.py  _backend_router.py  _benchmark.py  _chunker.py  _config.py  _document_classification.py  _entity_extraction.py  _error_handling.py  _extractors.py  _gmft.py  _internal_bindings.pyi  _language_detection.py  _mime_types.py  _paddleocr.pyi  _pandoc.py  _registry.py  _rust_bridge.py  _semantic_text_splitter.pyi  _tesseract.py  _types.py  cli.py  exceptions.py  extraction.py  mcp_server.py
kreuzberg_rust/: Cargo.toml
kreuzberg_rust/src/: lib.rs
scripts/: build_rust.py  download_gmft_models.py  download_tatr_models.py  download_vision_tables_models.py  gen_ref_pages.py  migrate_tests.py  ocr_quality_report.py  prepare_wheel.py  profile_libreoffice.py  profile_pyo3_bridge.py  setup-rust.sh  sign_macos_wheels.py  sync_versions.py  verify_wheel_install.py
src/: cache.rs  chunking.rs  common.rs  email.rs  error_utils.rs  html.rs  image_preprocessing.rs  lib.rs  quality.rs  string_utils.rs  text.rs  xml.rs
tests/: cli_integration_test.py  cli_test.py  config_comprehensive_test.py  conftest.py  device_test.py  extraction_batch_test.py  extraction_test.py  gmft_extended_test.py  gmft_test.py  language_detection_test.py  ocr_gpu_test.py  test_device.py  test_ocr_gpu.py
v3/: pyproject.toml
v4-rc1/: 404.html  index.html  sitemap.xml
(+1461 files in other folders)
