[package]
name = "kreuzberg"
version = "4.0.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfed@gmail.com>"]
description = "Kreuzberg - Internal rust bindings module"
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://goldziher.github.io/kreuzberg/"

[lib]
name = "_internal_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.12"
base64 = "0.22.1"
calamine = { version = "0.31.0", features = ["dates"] }
chardetng = "0.1.17"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
encoding_rs = "0.8.35"
fast_image_resize = "5.3.0"
hex = "0.4.3"
html-escape = "0.2.13"
html-to-markdown-rs = { path = "../html-to-markdown/crates/html-to-markdown", features = ["inline-images"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "rayon"] }
libc = "0.2"
mail-parser = "0.11.1"
memchr = "2.7.6"
msg_parser = "0.1.1"
ndarray = "0.16.1"
numpy = "0.26.0"
once_cell = "1.21.3"
polars = { version = "0.51.0", default-features = false, features = ["ipc"] }
pyo3 = { version = "0.26.0", features = ["abi3-py310"] }
quick-xml = "0.37.0"
rayon = "1.11.0"
regex = "1.11.3"
rmp-serde = "1.3"
roxmltree = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tesseract-rs = "0.1"
thiserror = "2.0.16"
text-splitter = { version = "0.28.0", features = ["markdown"] }
unicode-normalization = "0.1.24"
zip = "5.1.1"


[dev-dependencies]
tempfile = "3.23.0"
filetime = "0.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
