[workspace]
members = [
    "crates/kreuzberg",
    "crates/kreuzberg-py",
    "crates/kreuzberg-cli",
    "crates/kreuzberg-node",
]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://kreuzberg.dev"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
