[package]
name = "kreuzberg-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Kreuzberg document intelligence - Node.js native bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.4", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "3.3"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
kreuzberg = { path = "../kreuzberg", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
kreuzberg = { path = "../kreuzberg", default-features = false, features = [
    "pdf",
    "excel",
    "office",
    "email",
    "html",
    "xml",
    "archives",
    "ocr",
    "language-detection",
    "quality",
    "keywords",
    "chunking",
] }

[build-dependencies]
napi-build = "2.2"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc-rust = "0.2"
