[package]
name = "kreuzberg-py"
version = "4.0.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfed@gmail.com>"]
description = "Python bindings for Kreuzberg document intelligence library"
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://goldziher.github.io/kreuzberg/"

[lib]
name = "_internal_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
kreuzberg = { path = "../kreuzberg" }
pyo3 = { version = "0.26.0", features = ["abi3-py310"] }
rmp-serde = "1.3"
serde = "1.0.228"
serde_json = "1.0.145"
numpy = "0.26.0"
tokio = { version = "1.48.0", features = ["rt", "macros"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]
