[package]
name = "kreuzberg"
version = "4.0.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfed@gmail.com>"]
description = "High-performance document intelligence core library"
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://goldziher.github.io/kreuzberg/"

[lib]
crate-type = ["rlib"]

[build-dependencies]
# No external dependencies needed - using std::process::Command for curl/tar

[dependencies]
ahash = "0.8.12"
async-trait = "0.1.89"
base64 = "0.22.1"
calamine = { version = "0.31.0", features = ["dates"] }
chardetng = "0.1.17"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
encoding_rs = "0.8.35"
fast_image_resize = "5.3.0"
hex = "0.4.3"
html-escape = "0.2.13"
html-to-markdown-rs = { path = "../../../html-to-markdown/crates/html-to-markdown", features = ["inline-images"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "rayon"] }
lazy_static = "1.5.0"
libc = "0.2"
lopdf = "0.38.0"
mail-parser = "0.11.1"
pdfium-render = { version = "0.8.35", features = ["thread_safe", "image"] }
memchr = "2.7.6"
msg_parser = "0.1.1"
ndarray = "0.17.0"
once_cell = "1.21.3"
polars = { version = "0.51.0", default-features = false, features = ["ipc"] }
quick-xml = "0.38.3"
rayon = "1.11.0"
regex = "1.12.2"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
saphyr = "0.0.6"
toml = "0.9.8"
mime_guess = "2.0"
rmp-serde = "1.3"
tesseract-rs = "0.1.20"
thiserror = "2.0.17"
text-splitter = { version = "0.28.0", features = ["markdown"] }
tokio = { version = "1.48.0", features = ["process", "fs", "rt", "rt-multi-thread", "macros", "time"] }
unicode-normalization = "0.1.24"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "6.0.0"

[dev-dependencies]
tempfile = "3.23.0"
filetime = "0.2"
