[package]
name = "kreuzberg"
version = "4.0.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfed@gmail.com>"]
description = "High-performance document intelligence library"
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://goldziher.github.io/kreuzberg/"

[lib]
crate-type = ["rlib"]

[features]
default = []

# Format extractors
pdf = ["dep:pdfium-render", "dep:lopdf", "dep:image"]
excel = ["dep:calamine", "dep:polars"]
office = ["dep:roxmltree", "dep:zip"]
email = ["dep:mail-parser", "dep:msg_parser"]
html = ["dep:html-to-markdown-rs", "dep:html-escape"]
xml = ["dep:quick-xml", "dep:roxmltree"]
archives = ["dep:zip", "dep:tar", "dep:sevenz-rust"]

# Processing features
ocr = ["dep:tesseract-rs", "dep:image", "dep:fast_image_resize", "dep:ndarray", "dep:kamadak-exif"]
language-detection = ["dep:whatlang"]
chunking = ["dep:text-splitter"]
stopwords = []  # Stopwords for keyword extraction and token reduction
quality = ["dep:unicode-normalization", "dep:chardetng", "dep:encoding_rs", "stopwords"]

# Keyword extraction (requires stopwords)
keywords-yake = ["dep:yake-rust", "stopwords"]
keywords-rake = ["dep:rake", "stopwords"]
keywords = ["keywords-yake", "keywords-rake"]

# Server features
api = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tracing"]
mcp = ["dep:rmcp"]

# Convenience bundles
full = [
    "pdf", "excel", "office", "email", "html", "xml", "archives",
    "ocr", "language-detection", "chunking", "quality", "keywords"
]
server = ["pdf", "excel", "html", "ocr", "api", "mcp"]
cli = ["pdf", "excel", "office", "html", "ocr", "language-detection", "chunking", "quality"]

[build-dependencies]
# No external dependencies needed - using std::process::Command for curl/tar

[dependencies]
# Core dependencies (always included)
ahash = "0.8.12"
async-trait = "0.1.89"
base64 = "0.22.1"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2"
memchr = "2.7.6"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
saphyr = "0.0.6"
toml = "0.9.8"
mime_guess = "2.0"
rmp-serde = "1.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["process", "fs", "rt", "rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }

# Format extractors (optional)
pdfium-render = { version = "0.8.35", features = ["thread_safe", "image"], optional = true }
lopdf = { version = "0.38.0", optional = true }
calamine = { version = "0.31.0", features = ["dates"], optional = true }
polars = { version = "0.51.0", default-features = false, features = ["ipc"], optional = true }
roxmltree = { version = "0.21.1", optional = true }
zip = { version = "6.0.0", optional = true }
mail-parser = { version = "0.11.1", optional = true }
msg_parser = { version = "0.1.1", optional = true }
html-to-markdown-rs = { version = "2.4.1", features = ["inline-images"], optional = true }
html-escape = { version = "0.2.13", optional = true }
quick-xml = { version = "0.38.3", optional = true }
tar = { version = "0.4.44", optional = true }
sevenz-rust = { version = "0.6.1", optional = true }

# Processing features (optional)
tesseract-rs = { version = "0.1.20", optional = true }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "rayon"], optional = true }
fast_image_resize = { version = "5.3.0", optional = true }
ndarray = { version = "0.16.1", optional = true }
kamadak-exif = { version = "0.6.1", optional = true }
whatlang = { version = "0.18.0", optional = true }
text-splitter = { version = "0.28.0", features = ["markdown"], optional = true }
unicode-normalization = { version = "0.1.24", optional = true }
chardetng = { version = "0.1.17", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
yake-rust = { version = "1.0.3", optional = true }
rake = { version = "0.3.6", optional = true }

# Server features (optional)
axum = { version = "0.8", features = ["macros", "json", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"], optional = true }
tracing = { version = "0.1", optional = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "macros", "base64", "transport-io"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
filetime = "0.2"
tar = "0.4.44"
zip = "6.0.0"
serial_test = "3.2.0"
